--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -20,9 +20,8 @@ jobs:
       - shell: bash
         run: echo "##[set-output name=count;]$(git log --oneline | wc -l)"
         id: get_count
-      - run: echo ${{ toJSON(github.event.pull_request) }}
       
       - run: |
           curl -X POST \
           -H 'Content-type: application/json' \
-          --data '{ "type": "mrkdwn", "text": "*[${{ github.event.pull_request.base.repo.full_name }}]* <mailto:${{ steps.get_current_email.outputs.email }}|${{ steps.get_current_name.outputs.name }}> wants to merge ${{ steps.get_count.outputs.count }} commit(s) into `<${{ github.event.pull_request.base.repo.html_url }}|${{ github.event.pull_request.base.ref }}>` from `<${{ github.event.pull_request.html_url }}|${{ github.event.pull_request.title }}>`"}' ${{ secrets.SLACK_WEBHOOK_URL }}
+          --data '{ "type": "mrkdwn", "text": "*[${{ github.event.pull_request.base.repo.full_name }}]* <mailto:${{ steps.get_current_email.outputs.email }}|${{ steps.get_current_name.outputs.name }}> wants to merge ${{ steps.get_count.outputs.count }} commit(s) into `<${{ github.event.pull_request.base.repo.html_url }}|${{ github.event.pull_request.base.ref }}>` from `<${{ github.event.pull_request.html_url }}|${{ github.event.pull_request.head.ref }}>`"}' ${{ secrets.SLACK_WEBHOOK_URL }}
